force-app/main/default/objects/OrderDetail__c/OrderDetail__c.object-meta.xml
<CustomObject>
    <label>注文明細</label>
    <nameField>
        <label>注文明細#</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>