force-app/main/default/objects/OrderDetail__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <label>指定入庫日</label>
    <type>Date</type>
</CustomField>