force-app/main/default/objects/OrderDetail__c/fields/BillingDate_F__c.field-meta.xml
<CustomField>
    <fullName>BillingDate_F__c</fullName>
    <formula>OrderHeader__r.BillingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求日</label>
    <type>Date</type>
</CustomField>