force-app/main/default/objects/OrderDetail__c/fields/Category_F__c.field-meta.xml
<CustomField>
    <fullName>Category_F__c</fullName>
    <formula>OrderHeader__r.Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>カテゴリー</label>
    <type>Text</type>
</CustomField>