force-app/main/default/objects/OrderDetail__c/fields/CSQuantity__c.field-meta.xml
<CustomField>
    <fullName>CSQuantity__c</fullName>
    <label>CS数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>