force-app/main/default/objects/OrderDetail__c/fields/DeliveryDate_F__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate_F__c</fullName>
    <formula>OrderHeader__r.ExpectedDeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納品日</label>
    <type>Date</type>
</CustomField>