force-app/main/default/objects/OrderDetail__c/fields/DesignatedLot__c.field-meta.xml
<CustomField>
    <fullName>DesignatedLot__c</fullName>
    <label>指定ロット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>