force-app/main/default/objects/OrderDetail__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>指定賞味期限</label>
    <type>Date</type>
</CustomField>