force-app/main/default/objects/OrderDetail__c/fields/LotNumber_F__c.field-meta.xml
<CustomField>
    <fullName>LotNumber_F__c</fullName>
    <formula>ProductMaster__r.ProductCode__c
+
&quot;_&quot;
+
SUBSTITUTE(
    IF(
        NOT(ISBLANK(ProductMaster__r.Account__c)),
        CASE(
            ProductMaster__r.Account__r.AllocationPriority__c,
            &quot;ArrivalDate&quot;, TEXT(ArrivalDate__c),
            &quot;ManufactureDate&quot;, TEXT(ManufactureDate__c),
            &quot;ExpirationDate&quot;, TEXT(ExpirationDate__c),
            &quot;LotNumber&quot;,DesignatedLot__c,
            &quot;&quot;
        ), &quot;&quot;
    ), &quot;-&quot;, &quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>指定ロット番号</label>
    <type>Text</type>
</CustomField>