force-app/main/default/objects/OrderDetail__c/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>注文明細</relationshipLabel>
    <relationshipName>OrderDetailList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>