force-app/main/default/objects/OrderDetail__c/fields/OrderHeaderName_F__c.field-meta.xml
<CustomField>
    <fullName>OrderHeaderName_F__c</fullName>
    <formula>OrderHeader__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注文#</label>
    <type>Text</type>
</CustomField>