force-app/main/default/objects/OrderDetail__c/fields/ProductName_F__c.field-meta.xml
<CustomField>
    <fullName>ProductName_F__c</fullName>
    <formula>BLANKVALUE(ItemName__c, ProductMaster__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>品名_F</label>
    <type>Text</type>
</CustomField>