force-app/main/default/objects/OrderDetail__c/fields/QuantityAfterConversion__c.field-meta.xml
<CustomField>
    <fullName>QuantityAfterConversion__c</fullName>
    <label>換算後数量</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>