force-app/main/default/objects/OrderDetail__c/fields/ReceptionDatetime_F__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDatetime_F__c</fullName>
    <formula>OrderHeader__r.ReceptionDatetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受付日時</label>
    <type>Date</type>
</CustomField>