force-app/main/default/objects/OrderDetail__c/fields/RemainingQuantity_F__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity_F__c</fullName>
    <formula>Quantity__c - PickingedQuantity_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>未ピッキング数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>