force-app/main/default/objects/OrderDetail__c/fields/UnitQuantity__c.field-meta.xml
<CustomField>
    <fullName>UnitQuantity__c</fullName>
    <label>入数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>