force-app/main/default/objects/OrderDetail__c/validationRules/CannotUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotUpdate</fullName>
    <active>true</active>
    <description>注文の「状態：請求処理済み」の場合、「注文明細」は変更できません。</description>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;
ISPICKVAL(  OrderHeader__r.Status__c , &quot;InvoiceConfirmed&quot;)</errorConditionFormula>
    <errorMessage>注文の「状態：請求処理済み」の場合、「注文明細」は変更できません。</errorMessage>
</ValidationRule>