force-app/main/default/objects/OrderDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OrderHeader__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>