force-app/main/default/objects/OrderDetail__c/listViews/mockTest.listView-meta.xml
<ListView>
    <fullName>mockTest</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>受付中の受注</label>
</ListView>